[package]
name = "serde-prop"
version = "0.1.1"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false }
itoa = "1.0"
ryu = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]
